@@ -641,7 +641,7 @@ specifier|final
 name|String
 name|DEFAULT_FILE_TYPES
 init|=
-literal|"xml,json,csv,pdf,doc,docx,ppt,pptx,xls,xlsx,odt,odp,ods,ott,otp,ots,rtf,htm,html,txt,log"
+literal|"xml,json,jsonl,csv,pdf,doc,docx,ppt,pptx,xls,xlsx,odt,odp,ods,ott,otp,ots,rtf,htm,html,txt,log"
 decl_stmt|;
 DECL|field|DATA_MODE_FILES
 specifier|static
@@ -719,6 +719,10 @@ decl_stmt|;
 DECL|field|type
 name|String
 name|type
+decl_stmt|;
+DECL|field|format
+name|String
+name|format
 decl_stmt|;
 DECL|field|mode
 name|String
@@ -879,6 +883,15 @@ operator|.
 name|put
 argument_list|(
 literal|"json"
+argument_list|,
+literal|"application/json"
+argument_list|)
+expr_stmt|;
+name|mimeMap
+operator|.
+name|put
+argument_list|(
+literal|"jsonl"
 argument_list|,
 literal|"application/json"
 argument_list|)
@@ -1508,6 +1521,16 @@ argument_list|(
 literal|"type"
 argument_list|)
 decl_stmt|;
+name|String
+name|format
+init|=
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"format"
+argument_list|)
+decl_stmt|;
 comment|// Recursive
 name|int
 name|recursive
@@ -1682,6 +1705,8 @@ name|auto
 argument_list|,
 name|type
 argument_list|,
+name|format
+argument_list|,
 name|recursive
 argument_list|,
 name|delay
@@ -1733,6 +1758,9 @@ parameter_list|,
 name|String
 name|type
 parameter_list|,
+name|String
+name|format
+parameter_list|,
 name|int
 name|recursive
 parameter_list|,
@@ -1779,6 +1807,12 @@ operator|.
 name|type
 operator|=
 name|type
+expr_stmt|;
+name|this
+operator|.
+name|format
+operator|=
+name|format
 expr_stmt|;
 name|this
 operator|.
@@ -4362,6 +4396,51 @@ expr_stmt|;
 block|}
 comment|// TODO: Add a flag that disables /update and sends all to /update/extract, to avoid CSV, JSON, and XML files
 comment|// TODO: from being interpreted as Solr documents internally
+if|if
+condition|(
+name|type
+operator|.
+name|equals
+argument_list|(
+literal|"application/json"
+argument_list|)
+operator|&&
+operator|!
+literal|"solr"
+operator|.
+name|equals
+argument_list|(
+name|format
+argument_list|)
+condition|)
+block|{
+name|suffix
+operator|=
+literal|"/json/docs"
+expr_stmt|;
+name|String
+name|urlStr
+init|=
+name|appendUrlPath
+argument_list|(
+name|solrUrl
+argument_list|,
+name|suffix
+argument_list|)
+operator|.
+name|toString
+argument_list|()
+decl_stmt|;
+name|url
+operator|=
+operator|new
+name|URL
+argument_list|(
+name|urlStr
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
 if|if
 condition|(
 name|type
