@@ -875,6 +875,26 @@ name|f
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|f
+operator|=
+operator|new
+name|File
+argument_list|(
+literal|"foo.jsonl"
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"application/json"
+argument_list|,
+name|SimplePostTool
+operator|.
+name|guessType
+argument_list|(
+name|f
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 annotation|@
 name|Test
